Implemented basic functionality for showing spiderchart, linechart, and bar chart. Also a gui element for having slidable variables.

--- a/test_collection/test/index.html
+++ b/test_collection/test/index.html
@@ -11,6 +11,11 @@
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
 	<script src="dataplayer.js"></script>
+	<script src="slidablevariable.js"></script>
+	<script src="linechart.js"></script>
+	<script src="bar.js"></script>
+	<script src="barchart.js"></script>
+	<script src="spiderchart.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
