--- a/test_collection/test/index.html
+++ b/test_collection/test/index.html
@@ -11,6 +11,8 @@
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
 	<script src="dataplayer.js"></script>
+	<script src="dropzone.js"></script>
+	<script src="draggabletextbox.js"></script>
 	<script src="scatterplot.js"></script>
 	<script src="linechart.js"></script>
 	<script src="slidablevariable.js"></script>
