--- a/test_collection/test/index.html
+++ b/test_collection/test/index.html
@@ -11,6 +11,7 @@
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
 	<script src="dataplayer.js"></script>
+	<script src="clickableshape.js"></script>
 	<script src="dropzone.js"></script>
 	<script src="draggabletextbox.js"></script>
 	<script src="scatterplot.js"></script>
