--- a/test_collection/test/index.html
+++ b/test_collection/test/index.html
@@ -27,6 +27,8 @@
 			margin:0;
 			padding:0;
 			overflow: hidden;
+			background: url('assets/blue1.jpg');
+			background-size: cover;
 		}
 		canvas {
 			margin:auto;
